--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=AlexTutorial <pihtoded36@gmail.ru>
 sentence=Light and fast library for resistive touchscreens
 paragraph=Light and fast library for resistive touchscreens
 category=Sensors
-url=https://github.com/GyverLibs/EncButton
+url=https://github.com/AlexTutorial/KrokoTS
 architectures=*
