--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=KrokoTS
 version=1.1
-author=AlexTutorial <pihtoded36@gmail.ru>
-maintainer=AlexTutorial <pihtoded36@gmail.ru>
+author=AlexTutorial <pihtoded36@gmail.com>
+maintainer=AlexTutorial <pihtoded36@gmail.com>
 sentence=Light and fast library for resistive touchscreens
 paragraph=Light and fast library for resistive touchscreens
 category=Sensors
-url=https://github.com/GyverLibs/EncButton
+url=https://github.com/AlexTutorial/KrokoTS
 architectures=*
